# localInfo

./: .gitignore  CMakeLists.txt  README.md  main.cpp
data/: test.graph
genGraph/: CMakeLists.txt  genGraph.cpp  genGraph.h  loadGraph.cpp  loadGraph.h  tinyxml2.cpp
graphLocalInfo/: CMakeLists.txt  GraphLocalInfo.cpp  GraphLocalInfo.h
